--- a/AppWeek04/app/src/main/AndroidManifest.xml
+++ b/AppWeek04/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity
             android:name=".GreetActivity"
             android:exported="false"/>
+        <activity
+            android:name=".CounterActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
